--- a/IMU-Reader.ioc
+++ b/IMU-Reader.ioc
@@ -126,8 +126,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=L432Test1.ioc
-ProjectManager.ProjectName=L432Test1
+ProjectManager.ProjectFileName=IMU-Reader.ioc
+ProjectManager.ProjectName=IMU-Reader
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
